--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,23 @@
 language: python
 sudo: required
-dist: xenial
+dist: bionic
+env:
+  - DJANGO_VERSION="Django>=2.1,<2.2"
+  - DJANGO_VERSION="Django>=2.2,<3.0"
+  - DJANGO_VERSION="Django>=3.0,<3.1"
+  - DJANGO_VERSION="Django>=3.1,<3.2"
+  - DJANGO_VERSION='https://github.com/django/django/archive/master.tar.gz'
 python:
     - "3.6"
     - "3.7"
     - "3.8"
+matrix:
+  exclude:
+    - python: "3.8"
+      env: DJANGO_VERSION="Django>=2.1,<2.2"
 install:
     - python setup.py develop
+before_script:
+  - pip install "$DJANGO_VERSION"
 script:
     - python setup.py test
