--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 sudo: required
 dist: bionic
 env:
+  - DJANGO_VERSION="Django>=2.0,<2.1"
   - DJANGO_VERSION="Django>=2.1,<2.2"
   - DJANGO_VERSION="Django>=2.2,<3.0"
   - DJANGO_VERSION="Django>=3.0,<3.1"
@@ -13,6 +14,8 @@ python:
     - "3.8"
 matrix:
   exclude:
+    - python: "3.8"
+      env: DJANGO_VERSION="Django>=2.0,<2.1"
     - python: "3.8"
       env: DJANGO_VERSION="Django>=2.1,<2.2"
 install:
