--- a/npm/package.json
+++ b/npm/package.json
@@ -5,11 +5,11 @@
   "description": "Application métier du réseau interne",
   "repository": "https://github.com/d9pouces/CKDemo",
   "dependencies": {
-    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "ts-loader": "^7.0.3",
     "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
