--- a/setup.cfg
+++ b/setup.cfg
@@ -17,12 +17,12 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-description = Websocket integration for Django websites
+description = Websocket integration for Django
 license = CeCILL-B
 long_description = file: README.md
 long_description_content_type = text/markdown
-maintainer = CNCTR
-maintainer_email = chargedemission@cnctr.fr
+maintainer = Matthieu Gallet
+maintainer_email = github@19pouces.net
 name = df_websockets
 url = https://github.com/d9pouces/df_websockets
 version = attr: df_websockets.__version__
