--- a/npm/package.json
+++ b/npm/package.json
@@ -2,7 +2,7 @@
   "name": "df_websockets",
   "version": "0.9.0",
   "license": "CECILL-B",
-  "description": "Application métier du réseau interne",
+  "description": "Websocket integration for Django",
   "repository": "https://github.com/d9pouces/CKDemo",
   "dependencies": {
   },
