--- a/npm/package.json
+++ b/npm/package.json
@@ -4,13 +4,12 @@
   "license": "CECILL-B",
   "description": "Websocket integration for Django",
   "repository": "https://github.com/d9pouces/CKDemo",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "ts-loader": "^7.0.3",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "build-dev": "./node_modules/.bin/webpack --mode development",
