start of a demo app for testing all JS functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,15 @@ version = attr: df_websockets.__version__
 include_package_data = True
 packages = find:
 zip_safe = False
-
+install_requires =
+        asgiref
+        celery
+        channels
+        channels_redis
+        df_config
+        django
+        pyasn1>=0.4.8
+        redis
 [isort]
 multi_line_output=3
 include_trailing_comma=True
@@ -52,8 +60,8 @@ envlist = py36,p37,py38
 minversion = 3.4.0
 
 [testenv]
-deps=nose
-commands =nosetests []
+deps = nose
+commands = nosetests []
 
 [testenv:precommit]
 deps =
