--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
         django
         pyasn1>=0.4.8
         redis
+
 [isort]
 multi_line_output=3
 include_trailing_comma=True
@@ -48,32 +49,58 @@ use_parentheses=True
 line_length=88
 
 [mypy]
-files=df_websockets
+files=interdiode id_tests tools
 ignore_missing_imports=true
+python_version = 3.8
 
 [flake8]
-ignore = E203, E266, E501, W503
+ignore = E203, E501, C901, F401, W503
 max-line-length = 88
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
 
 [tox:tox]
-envlist = py36,p37,py38
+envlist = {py36,py37,py38,py39},precommit
 minversion = 3.4.0
+requires = tox-docker
+
+[docker:redis]
+image = redis:alpine
+ports =
+        16379:6379/tcp
 
 [testenv]
-deps = nose
-commands = nosetests []
+commands =
+        python demo_manage.py configuration apply
+        python demo_manage.py makemigrations
+        python demo_manage.py test test_df_websockets
+docker =
+        redis
+deps =
+        aiosmtpd
+        hypothesis
+        nose
+        django22: Django>=2.2,<2.3
+        django30: Django>=3.0,<3.1
+        django31: Django>=3.1,<3.2
+setenv =
+        DF_REDIS_DB=1
+        DF_REDIS_HOST=localhost
+        DF_REDIS_PASSWORD=
+        DF_REDIS_PORT=16379
 
 [testenv:precommit]
 deps =
-    black==19.10b0
+    black==20.8b0
     flake8
     isort
     mypy
 commands =
-    isort metier df_site
-    flake8 metier df_site
-    mypy metier df_site
-    black metier df_site
+    isort df_websockets demo_df_websockets test_df_websockets
+    flake8 df_websockets demo_df_websockets test_df_websockets
+    mypy df_websockets demo_df_websockets test_df_websockets
+    black df_websockets demo_df_websockets test_df_websockets
+docker =
 
 ;[build-system]
 ;requires = [
