start of a demo app for testing all JS functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,22 +60,14 @@ max-complexity = 18
 select = B,C,E,F,W,T4,B9
 
 [tox:tox]
-envlist = {py36,py37,py38,py39},precommit
+envlist = {py36,py37,py38,py39}-{django22,django30,django31}-{channels24,channels30},precommit
 minversion = 3.4.0
-requires = tox-docker
-
-[docker:redis]
-image = redis:alpine
-ports =
-        16379:6379/tcp
 
 [testenv]
 commands =
-        python demo_manage.py configuration apply
         python demo_manage.py makemigrations
+        python demo_manage.py migrate
         python demo_manage.py test test_df_websockets
-docker =
-        redis
 deps =
         aiosmtpd
         hypothesis
@@ -83,6 +75,8 @@ deps =
         django22: Django>=2.2,<2.3
         django30: Django>=3.0,<3.1
         django31: Django>=3.1,<3.2
+        channels24: channels>=2.4,<3.0
+        channels30: channels>=3.0,<3.1
 setenv =
         DF_REDIS_DB=1
         DF_REDIS_HOST=localhost
