--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,22 @@ language: python
 # sudo: required
 dist: bionic
 env:
-- DJANGO_VERSION=Django>=2.2,<3.0
-- DJANGO_VERSION=Django>=3.0,<3.1
+#- DJANGO_VERSION=Django>=2.2,<3.0
+#- DJANGO_VERSION=Django>=3.0,<3.1
 - DJANGO_VERSION=Django>=3.1,<3.2
-- CHANNELS_VERSION=channels>=2.4,<3.0
+#- CHANNELS_VERSION=channels>=2.4,<3.0
 - CHANNELS_VERSION=channels>=3.0,<3.1
 python:
-- "3.6"
-- "3.7"
+#- "3.6"
+#- "3.7"
 - "3.8"
 matrix:
   exclude:
   - python: "3.8"
     env: DJANGO_VERSION="Django>=2.0,<2.1"
 install:
+- python -m pip install $DJANGO_VERSION $CHANNELS_VERSION
 - python setup.py develop
-before_script:
-- python -m pip install "$DJANGO_VERSION" "$CHANNELS_VERSION"
 script:
 - python demo_manage.py migrate
 - python demo_manage.py test
