--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,10 @@ dist: bionic
 env:
   matrix:
   - DJANGO_VERSION="Django>=3.1,<3.2" CHANNELS_VERSION="channels>=3.0,<3.1"
-
-#- DJANGO_VERSION=Django>=2.2,<3.0
-#- DJANGO_VERSION=Django>=3.0,<3.1
-#- CHANNELS_VERSION=channels>=2.4,<3.0
+  - DJANGO_VERSION="Django>=2.2,<3.0" CHANNELS_VERSION="channels>=3.0,<3.1"
 python:
-#- "3.6"
-#- "3.7"
+- "3.6"
+- "3.7"
 - "3.8"
 matrix:
   exclude:
