start of a demo app for testing all JS functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
         channels_redis
         df_config
         django
+        hiredis<2.0
         pyasn1>=0.4.8
         redis
 
