--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 description = Websocket integration for Django
 license = CeCILL-B
 long_description = file: README.md
@@ -36,7 +37,6 @@ install_requires =
         celery
         channels
         channels_redis
-        df_config
         django
         hiredis<2.0
         pyasn1>=0.4.8
@@ -61,7 +61,7 @@ max-complexity = 18
 select = B,C,E,F,W,T4,B9
 
 [tox:tox]
-envlist = {py36,py37,py38,py39}-{django22,django30,django31}-{channels24,channels30},precommit
+envlist = {py36,py37,py38,py39,py310}-{django22,django30,django31,django32,django40}-{channels24,channels30},precommit
 minversion = 3.4.0
 
 [testenv]
@@ -76,6 +76,8 @@ deps =
         django22: Django>=2.2,<2.3
         django30: Django>=3.0,<3.1
         django31: Django>=3.1,<3.2
+        django32: Django>=3.2,<4.0
+        django40: Django==4.0rc1^
         channels24: channels>=2.4,<3.0
         channels30: channels>=3.0,<3.1
 setenv =
