remove window_key from URL

--- a/setup.cfg
+++ b/setup.cfg
@@ -104,3 +104,21 @@ docker =
 ;  "wheel",
 ;]
 ;build-backend = "setuptools.build_meta"
+
+
+
+[pydocstyle]
+inherit = false
+ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D205, D212, D213, D400, D403, D415
+match = .*\.py
+match_dir=interdiode
+# waiting for a fix of #363
+
+
+[pycodestyle]
+max-line-length = 88
+
+
+[coverage:report]
+fail_under = 91
+
