use i18n in render_to_string

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,8 @@ classifiers =
     Framework :: Django :: 2.2
     Framework :: Django :: 3.0
     Framework :: Django :: 3.1
+    Framework :: Django :: 4.0
+    Framework :: Django :: 4.1
     License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
@@ -59,6 +61,11 @@ ignore = E203, E501, C901, F401, W503
 max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
+
+[pydocstyle]
+inherit = false
+ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D205, D212, D213, D400, D403, D415
+match = .*\.py
 
 [tox:tox]
 envlist = {py36,py37,py38,py39,py310}-{django22,django30,django31,django32,django40}-{channels24,channels30},precommit
