--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,11 +2,12 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 - repo: https://github.com/d9pouces/mybestpractices
-  rev: 0.2.9
+  rev: 0.3.1
   hooks:
   - id: mybestpractices-git-autotag
+  - id: mybestpractices-sync-npm
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.4.0
     hooks:
     -   id: check-added-large-files
     -   id: check-ast
@@ -17,23 +18,23 @@ repos:
     -   id: check-toml
     -   id: check-yaml
 -   repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 23.3.0
     hooks:
     -   id: black
 -   repo: https://github.com/PyCQA/flake8
-    rev: 3.9.0
+    rev: 6.0.0
     hooks:
     -   id: flake8
 -   repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.0.0
+    rev: 6.3.0
     hooks:
     -   id: pydocstyle
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.8.0
+    rev: 5.12.0
     hooks:
     -   id: isort
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.8.0
+    rev: v1.10.0
     hooks:
     -   id: rst-inline-touching-normal
     -   id: rst-directive-colons
