--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@d9pouces/df_websockets",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "license": "CECILL-B",
   "description": "Websocket integration for Django",
   "repository": {
@@ -13,6 +13,7 @@
     "webpack": "^5.81.0",
     "webpack-cli": "^4.5.0"
   },
+  "main": "dist/js/df_websockets.min.js",
   "scripts": {
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production"
@@ -21,7 +22,6 @@
     "url": "https://github.com/d9pouces/df_websockets/issues"
   },
   "homepage": "https://github.com/d9pouces/df_websockets#readme",
-  "main": "webpack.config.js",
   "dependencies": {},
   "keywords": [
     "df_websockets",
