style: NPMjs packaging

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
   hooks:
   - id: mybestpractices-git-autotag
   - id: mybestpractices-sync-npm
+    args: ["-p", "npm/package.json"]
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
