--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ env:
   matrix:
   - DJANGO_VERSION="Django>=3.1,<3.2" CHANNELS_VERSION="channels>=3.0,<3.1"
   - DJANGO_VERSION="Django>=2.2,<3.0" CHANNELS_VERSION="channels>=3.0,<3.1"
+  - DJANGO_VERSION="Django>=3.0,<4.0" CHANNELS_VERSION="channels>=3.0,<3.1"
+  - DJANGO_VERSION="Django>=4.0,<5.0" CHANNELS_VERSION="channels>=4.0,<5.0"
 python:
 - "3.6"
 - "3.7"
 - "3.8"
+- "3.9"
+- "3.10"
+- "3.11"
 matrix:
   exclude:
   - python: "3.8"
