docs: updated classifiers

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ classifiers =
     Framework :: Django :: 3.1
     Framework :: Django :: 4.0
     Framework :: Django :: 4.1
+    Framework :: Django :: 4.2
     License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
@@ -19,7 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 description = Websocket integration for Django
 license = CeCILL-B
 long_description = file: README.md
@@ -38,7 +39,6 @@ install_requires =
         asgiref
         channels
         channels_redis
-        daphne
         django
         redis
 
