--- a/setup.cfg
+++ b/setup.cfg
@@ -78,11 +78,12 @@ deps =
         aiosmtpd
         hypothesis
         nose
+        daphne
         django22: Django>=2.2,<2.3
         django30: Django>=3.0,<3.1
         django31: Django>=3.1,<3.2
         django32: Django>=3.2,<4.0
-        django40: Django==4.0rc1^
+        django40: Django==4.0
         channels24: channels>=2.4,<3.0
         channels30: channels>=3.0,<3.1
 setenv =
