--- a/setup.cfg
+++ b/setup.cfg
@@ -66,7 +66,7 @@ ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D205, D212, D213,
 match = .*\.py
 
 [tox:tox]
-envlist = {py36,py37,py38,py39,py310}-{django22,django30,django31,django32,django40}-{channels24,channels30},precommit
+envlist = {py36,py37,py38,py39,py310}-{django22,django30,django31,django32,django40,django41,django42,django50}-{channels24,channels30}
 minversion = 3.4.0
 
 [testenv]
@@ -82,8 +82,11 @@ deps =
         django22: Django>=2.2,<2.3
         django30: Django>=3.0,<3.1
         django31: Django>=3.1,<3.2
-        django32: Django>=3.2,<4.0
-        django40: Django==4.0
+        django32: Django>=3.2,<3.3
+        django40: Django>=4.0,<4.1
+        django41: Django>=4.1,<4.2
+        django42: Django>=4.2,<4.3
+        django50: Django>=5.0,<5.1
         channels24: channels>=2.4,<3.0
         channels30: channels>=3.0,<3.1
 setenv =
@@ -91,19 +94,6 @@ setenv =
         DF_REDIS_HOST=localhost
         DF_REDIS_PASSWORD=
         DF_REDIS_PORT=16379
-
-[testenv:precommit]
-deps =
-    black==20.8b0
-    flake8
-    isort
-    mypy
-commands =
-    isort df_websockets demo_df_websockets test_df_websockets
-    flake8 df_websockets demo_df_websockets test_df_websockets
-    mypy df_websockets demo_df_websockets test_df_websockets
-    black df_websockets demo_df_websockets test_df_websockets
-docker =
 
 ;[build-system]
 ;requires = [
