feat: update to use pyproject and poetry

--- a/.github/workflows/basic_unittests.yml
+++ b/.github/workflows/basic_unittests.yml
@@ -30,6 +30,16 @@ jobs:
           python-version: '3.9'
         - django-version: '5.0'
           python-version: '3.9'
+        - django-version: '5.0'
+          python-version: '3.13'
+        - django-version: '4.2'
+          python-version: '3.13'
+        - django-version: '4.1'
+          python-version: '3.13'
+        - django-version: '4.0'
+          python-version: '3.13'
+        - django-version: '3.2'
+          python-version: '3.13'
     steps:
     - uses: actions/checkout@v4.2.2
     - uses: actions/setup-python@v5.3.0
