--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox:tox]
-envlist = {py39,py310,py311,py312,py313}-{django22,django30,django31,django32,django40,django41,django42,django50,django51}-{channels24,channels30,channels40,channels41,channels42}
+envlist = {py39,py310,py311,py312,py313}-{django22,django30,django31,django32,django40,django41,django42,django50,django51,django52}-{channels24,channels30,channels40,channels41,channels42}
 minversion = 3.4.0
 
 [testenv]
@@ -23,6 +23,7 @@ deps =
     django42: Django>=4.2,<4.3
     django50: Django>=5.0,<5.1
     django51: Django>=5.1,<5.2
+    django52: Django>=5.2,<5.3
     pytest-django
 setenv =
     DF_REDIS_DB=1
